Changes for 1.8.1

 - [ZBX-1483] fixed icmppingsec to return seconds as in 1.6.x (Alexei)
 - [ZBX-862] added support of kernel.maxproc[] under Linux 2.6 (Sasha)
 - [ZBX-1714] added confirmation dialog for proxy operations (Vedmak)
 - [ZBX-1717] fixed configuration -> ITservices display bugs when nodeid is greater than 99 (Vedmak)
 - [ZBX-1712] removed empty translation strings (Richlv)
 - [ZBXNEXT-194] added host status widget to dashboard (Vedmak)
 - [ZBX-1670] fixed events from slave nodes not shown when all nodes are selected (Vedmak)
 - [ZBX-1668] fixed saving graphs with web items (Aly)
 - [ZBX-1728] fixed expression deletion in log trigger form (Aly)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [ZBX-1732] added node and group name for screen widget "triggers info" (Vedmak)
 - [ZBXNEXT-196] added "Show with unacknowledged" filter option for triggers screen (Vedmak)
 - [ZBX-1729] removed limitation of showings triggers in charts only by one item (Aly)
 - [ZBX-1729] removed excessive space in chart header,  informational messages (triggers, percentile) are separated (Aly)
 - [ZBX-1577] fixed pie chart display (Aly)
 - [ZBX-1613] added sorting for user groups members (Vedmak)
 - [ZBX-1734] changed severity coloring in events screen (Aly)
 - [ZBX-1573] fixed colon precedence in user right entries (Aly)
 - [ZBX-1708] fixed errors in log items history screen (Aly)
 - [ZBX-1715] fixed errors in IT Services parent selection sceren (Aly)
 - [ZBX-1652] fixed user media deletion on profile save (Aly)
 - [ZBX-1641] fixed handling of "Include" statement in configuration files (Sasha)
 - [ZBX-1580] reduced frontend memory usage (Vedmak)
 - [ZBX-1663] fixed y axis calculation in stacked graphs (Aly)
 - [ZBX-1468] fixed editing user media types on node with id > 99 (Vedmak)
 - [ZBX-1727] add missing S_INCORRECT_EXPRESSION localisation string (Richlv)
 - [ZBX-1659] fixed checked marks on multilabel selection on map (Aly)