@@ -59,20 +59,17 @@ int     get_value_external(DC_ITEM *item, AGENT_RESULT *result)
 
 	init_result(result);
 
+	strscpy(params, "");
 	strscpy(key, item->key);
 	if((p2=strchr(key,'[')) != NULL)
 	{
 		*p2=0;
 		strscpy(scriptname,key);
-		zabbix_log( LOG_LEVEL_DEBUG, "scriptname [%s]",scriptname);
+		zabbix_log( LOG_LEVEL_DEBUG, "DEBUG [%s]",scriptname);
 		*p2='[';
 		p2++;
-	}
-	else    ret = NOTSUPPORTED;
 
-	if(ret == SUCCEED)
-	{
-		if((ret == SUCCEED) && (p=strchr(p2,']')) != NULL)
+		if((p=strchr(p2,']')) != NULL)
 		{
 			*p=0;
 			strscpy(params,p2);
@@ -80,14 +77,16 @@ int     get_value_external(DC_ITEM *item, AGENT_RESULT *result)
 			*p=']';
 			p++;
 		}
-		else    ret = NOTSUPPORTED;
+		else
+		{
+			zbx_snprintf(error, sizeof(error), "External check is not supported. No closing bracket ']' found.");
+			SET_MSG_RESULT(result, strdup(error));
+			return NOTSUPPORTED;
+		}
 	}
-
-	if (ret == NOTSUPPORTED)
+	else
 	{
-		zbx_snprintf(error, sizeof(error), "External check is not supported");
-		SET_MSG_RESULT(result, strdup(error));
-		return NOTSUPPORTED;
+		strscpy(scriptname,key);
 	}
 
 	zbx_snprintf(cmd, MAX_STRING_LEN-1, "%s/%s %s %s",
